# NdkSample

./: settings.gradle.kts
app/: CMakeCache.txt  Makefile  build.gradle.kts  cmake_install.cmake
app/src/androidTest/java/com/xinayida/ndksample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello-libs.cpp  jni-callback.cpp  native-lib.cpp
app/src/main/java/com/example/hellojnicallback/: JniHandler.java
app/src/main/java/com/xinayida/ndksample/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xinayida/ndksample/: ExampleUnitTest.kt
gen-libs/: settings.gradle.kts
gen-libs/app/: build.gradle.kts
gen-libs/app/src/androidTest/java/com/xinayida/gen_libs/: ExampleInstrumentedTest.kt
gen-libs/app/src/main/: AndroidManifest.xml
gen-libs/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
gen-libs/app/src/main/cpp/gmath/: CMakeLists.txt
gen-libs/app/src/main/cpp/gmath/src/: gmath.c
gen-libs/app/src/main/cpp/gperf/: CMakeLists.txt
gen-libs/app/src/main/java/com/xinayida/gen_libs/: MainActivity.kt
gen-libs/app/src/main/res/values/: strings.xml  themes.xml
gen-libs/app/src/main/res/values-night/: themes.xml
gen-libs/app/src/test/java/com/xinayida/gen_libs/: ExampleUnitTest.kt
gen-libs/gradle/: libs.versions.toml
gen-libs/gradle/wrapper/: gradle-wrapper.properties
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
